Fix rss feed overflow

--- a/client/src/components/Layout.css
+++ b/client/src/components/Layout.css
@@ -33,6 +33,7 @@
 }
 
 .content {
+  width: 100%;
   flex-grow: 1;
   background-color: var(--primary-clear);
   margin-top: 60px;
